--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,17 @@
-venv/
-
-settings.json
-
-*.pyc
-*.idea
-__pycache__/
-
-instance/
-
-.vscode/
 .benchmarks/
 .pytest_cache/
-.coverage
-*.un
-htmlcov/
-
-dist/
+.vscode/
+__pycache__/
 build/
+dist/
+htmlcov/
+instance/
+venv/
+
 *.egg-info/
+
+*.coverage
+*.idea
+*.lock
+*.pyc
+*.un
